<resources>
    <string name="app_name">EcoSprout</string>
    <string name="title">EcoSprout</string>
    <string name="slogan">"Plant. Grow. Thrive."</string>
    <string name="log_in_signup">New User?Create Account</string>
    <string name="sign_up_create_account">Create Account</string>
    <string name="sign_up_Log_in">Already Signed Up?Log In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forgetpassword_text">Please Check Your Email and Enter the validation code. Then reset the password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>
</resources>