<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/pngegg" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="1dp"
                android:fontFamily="@font/germanfeuman"
                android:text="@string/title"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/itimregular"
                android:text="@string/slogan"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/itimregular"
                android:hint="Mobile No."
                android:inputType="phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/itimregular"
                android:hint="Password"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/opensansregular"
                android:gravity="start"
                android:paddingVertical="10dp"
                android:text="@string/forget_password"
                android:textAlignment="viewStart"
                android:textColor="@color/dgreen"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/dgreen"
                android:fontFamily="@font/robotoslap"
                android:text="Log In"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/opensansregular"
                android:text="@string/log_in_signup"
                android:textColor="@color/dgreen"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>